# DronePluginGitea

./: .editorconfig  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  LICENSE-ISC  LICENSE-MIT  README.md
src/: main.rs
